--- a/C++/Silver 4/1063/Readme
+++ b/C++/Silver 4/1063/Readme
@@ -1,3 +1,5 @@
 어려운 문제는 아니었는데 시간을 너무 많이 끌렸다.
 자꾸 string으로 받은 1을 int 형으로 변환했을때 49가 아니라 1로 착각한다.
 자료형 변환할 때 더 주의깊게 하자.
+
+그리고 알고리즘 책에서 본 것처럼, 각 방향에 맞는 좌표 이동값을 class에서 미리 저장해두는 것도 좋았을 뻔 했다.
