--- a/C++/Silver 3/2232/Readme
+++ b/C++/Silver 3/2232/Readme
@@ -1,3 +1,5 @@
 code 1이 실패했다. 시간제한이 2초나 되는데 겨우 5만개의 데이터도 처리 못하나?
 아무리 그래도 O(n)인데? 정렬작업이 없는데도 이걸 못한다고? linear한데?
 억까하지 마세요 진짜. 오류가 있나?
+
+cin cout은 느리고 endl은 매우 느리다. 알게되었으니 앞으로 사용하지도 말자.
