--- a/C++/Silver 1/9020/Readme
+++ b/C++/Silver 1/9020/Readme
@@ -1,2 +1,5 @@
 너무 무식하게 구현한 것 같다.
 골드바흐 추측 관련한 좋은 알고리즘을 좀 찾아보는게 좋을듯.
+
+아; 이건 멍청했다. 2부터 서치하지 말고 진즉 n/2부터 돌리면 가장 좋은 골드바흐 쌍이 나올텐데
+이건 진짜 miss; 시간, 노력 둘 다 손해봄.
