--- a/C++/Silver 1/9020/Readme
+++ b/C++/Silver 1/9020/Readme
@@ -3,3 +3,6 @@
 
 아; 이건 멍청했다. 2부터 서치하지 말고 진즉 n/2부터 돌리면 가장 좋은 골드바흐 쌍이 나올텐데
 이건 진짜 miss; 시간, 노력 둘 다 손해봄.
+
+그리고 코딩 손에 좀 익어지면 그다음부터는 좀 실전 코딩처럼
+코드의 길이를 좀 포기하더라도 main에 모든 코드를 꼬라박는 형태를 지양해서 짜보자.
